--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -30,4 +30,10 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix:2.1.6.RELEASE'
     // 1. To use spring-cloud-hystrix
     implementation 'org.springframework.boot:spring-boot-starter-web:2.1.18.RELEASE'
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    compileOnly 'org.projectlombok:lombok'
+    runtimeOnly 'com.h2database:h2'
+    annotationProcessor 'org.projectlombok:lombok'
 }
