--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -1,9 +1,25 @@
 server:
   port: 8081
+  servlet:
+    session:
+      tracking-modes: cookie
+      timeout: 1800
 
 spring:
   application:
     name: auth
+  datasource:
+    url: jdbc:h2:tcp://localhost/~/msa_jongjun;MODE=MYSQL
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        #        show_sql: true
+        format_sql: true
 
 hystrix:
   command:
@@ -39,3 +55,9 @@ eureka:
 feign:
   hystrix:
     enabled: true
+
+logging.level:
+  org.hibernate.SQL: debug
+#  org.springframework.transaction.interceptor : trace
+#  org.hibernate.type: trace
+#  org.hibernate.type.descriptor.sql: trace
