refactor(zuul/application.yml): auth 서비스 주소 수정

--- a/zuul/src/main/resources/application.yml
+++ b/zuul/src/main/resources/application.yml
@@ -8,7 +8,7 @@ server:
 zuul:
   routes:
     auth:
-      path: /auths/**
+      path: /members/**
       serviceId: auth #eureka에 등록된 Id를 말한다.
       stripPrefix: false
 
