--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -20,6 +20,9 @@ spring:
       hibernate:
         #        show_sql: true
         format_sql: true
+  redis:
+    host: localhost
+    port: 6379
 
 hystrix:
   command:
