--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
+    schema:
+      - classpath:/member-schema.sql
+    data:
+    - classpath:/member-data.sql
   jpa:
     hibernate:
       ddl-auto: create
