refactor(auth/application.yml): application.yml profile별 분리

--- a/auth/src/main/resources/application-test.yml
+++ b/auth/src/main/resources/application-test.yml
@@ -6,16 +6,27 @@ server:
       timeout: 1800
 
 spring:
+  profiles:
+    active: test
   application:
     name: auth
+  cloud:
+    discovery:
+      enabled: false
+  datasource:
+    schema:
+      - classpath:/member-schema.sql
+      - classpath:/login-log-schema.sql
+    data:
+      - classpath:/member-data.sql
     initialization-mode: always
-#    mySQL setting
-#    url: jdbc:mysql://127.0.0.1:3306/msa_jongjun?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
-    url: jdbc:log4jdbc:mysql://127.0.0.1:3306/msa_jongjun?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+    #    mySQL setting
+    url: jdbc:mysql://127.0.0.1:3306/msa_jongjun?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+#    url: jdbc:log4jdbc:mysql://127.0.0.1:3306/msa_jongjun?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
     username: root
     password: root@1234
-    driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-  #    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
+#    driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
   jpa:
     hibernate:
       ddl-auto: none
@@ -64,6 +75,3 @@ feign:
 
 logging.level:
   org.hibernate.SQL: debug
-#  org.springframework.transaction.interceptor : trace
-#  org.hibernate.type: trace
-#  org.hibernate.type.descriptor.sql: trace
