--- a/auth/src/main/resources/application-dev.yml
+++ b/auth/src/main/resources/application-dev.yml
@@ -6,22 +6,30 @@ server:
       timeout: 1800
 
 spring:
+  profiles:
+    active: dev
   application:
     name: auth
+  cloud:
+    discovery:
+      enabled: false # for eureka
+  datasource:
+    schema:
+      - classpath:/member-schema.sql
+      - classpath:/login-log-schema.sql
+    data:
+      - classpath:/member-data.sql
     initialization-mode: always
-#    mySQL setting
-#    url: jdbc:mysql://127.0.0.1:3306/msa_jongjun?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
-    url: jdbc:log4jdbc:mysql://127.0.0.1:3306/msa_jongjun?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
-    username: root
-    password: root@1234
-    driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-  #    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:h2:tcp://localhost/~/msa_jongjun;MODE=MYSQL
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
   jpa:
     hibernate:
       ddl-auto: none
     properties:
       hibernate:
-#        show_sql: true
+        #        show_sql: true
         format_sql: true
   redis:
     host: localhost
@@ -58,12 +66,6 @@ eureka:
     service-url:
       defaultZone: http://127.0.0.1:8761/eureka  # default address
 
-feign:
-  hystrix:
-    enabled: true
-
 logging.level:
   org.hibernate.SQL: debug
-#  org.springframework.transaction.interceptor : trace
-#  org.hibernate.type: trace
-#  org.hibernate.type.descriptor.sql: trace
+
