--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
-    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2:1.16'
+    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
     implementation 'mysql:mysql-connector-java:8.0.30'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
