refactor(auth/application.yml): 스키마 생성 정보 추가 및 log4jdbc로 mysql연결

--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -8,14 +8,18 @@ server:
 spring:
   application:
     name: auth
+  datasource:
+    schema:
+      - classpath:/member-schema.sql
+      - classpath:/login-log-schema.sql
     initialization-mode: always
-#    mySQL setting
-#    url: jdbc:mysql://127.0.0.1:3306/msa_jongjun?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+    #    mySQL setting
+    #    url: jdbc:mysql://127.0.0.1:3306/msa_jongjun?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
     url: jdbc:log4jdbc:mysql://127.0.0.1:3306/msa_jongjun?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
     username: root
     password: root@1234
+    #    driver-class-name: com.mysql.cj.jdbc.Driver
     driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-  #    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: none
