--- a/zuul/src/main/resources/application.yml
+++ b/zuul/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
   application:
     name: zuul
+  redis:
+    host: localhost
+    port: 6379
 
 server:
   port: 8765
@@ -8,10 +11,10 @@ server:
 zuul:
   routes:
     auth:
-      path: /members/**
+      path: /**
       serviceId: auth #eureka에 등록된 Id를 말한다.
       stripPrefix: false
-
+      sensitiveHeaders: Cookie, Set-Cookie, Authorization
 eureka:
   instance:
     non-secure-port: ${server.port}
@@ -19,3 +22,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+
+feign:
+  hystrix:
+    enabled: true
