feat(zuul/application.yml): zuul sensitiveHeaders 값 변경
- 모든 해더가 하위 서비스로 이동할 수 있도록 설정

--- a/zuul/src/main/resources/application.yml
+++ b/zuul/src/main/resources/application.yml
@@ -9,12 +9,12 @@ server:
   port: 8765
 
 zuul:
+  sensitiveHeaders:
   routes:
     auth:
       path: /**
       serviceId: auth #eureka에 등록된 Id를 말한다.
       stripPrefix: false
-      sensitiveHeaders: Cookie, Set-Cookie, Authorization
 eureka:
   instance:
     non-secure-port: ${server.port}
