--- a/zuul/build.gradle
+++ b/zuul/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-zuul:2.1.6.RELEASE'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.1.6.RELEASE'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:2.1.5.RELEASE'
+    implementation 'net.minidev:json-smart:1.1.1'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 }
