--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix:2.1.6.RELEASE' // 1. To use spring-cloud-hystrix
     implementation 'org.springframework.boot:spring-boot-starter-web:2.1.18.RELEASE'
 
+    implementation 'org.springframework.kafka:spring-kafka:2.2.15.RELEASE'
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-security:2.1.18.RELEASE'
@@ -40,5 +42,6 @@ dependencies {
     implementation 'mysql:mysql-connector-java:8.0.30'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
     annotationProcessor 'org.projectlombok:lombok'
 }
