--- a/auth/src/main/resources/application-dev.yml
+++ b/auth/src/main/resources/application-dev.yml
@@ -12,7 +12,7 @@ spring:
     name: auth
   cloud:
     discovery:
-      enabled: false # for eureka
+      enabled: true # for eureka
   datasource:
     schema:
       - classpath:/member-schema.sql
@@ -34,6 +34,10 @@ spring:
   redis:
     host: localhost
     port: 6379
+  kafka:
+    bootstrap-servers: localhost:9093 #h2와 포트 동일
+    consumer:
+      group-id: auth
 
 hystrix:
   command:
