--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -30,6 +30,10 @@ spring:
   redis:
     host: localhost
     port: 6379
+  kafka:
+    bootstrap-servers: localhost:9093 #h2와 포트 동일
+    consumer:
+      group-id: auth
 
 hystrix:
   command:
