feat(email): 카프카 및 이메일 기본 설정

--- a/email/src/main/resources/application.yml
+++ b/email/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8084
+  port: 8086
   servlet:
     session:
       tracking-modes: cookie
@@ -8,7 +8,28 @@ server:
 spring:
   application:
     name: email
-  datasource:
+  kafka:
+    bootstrap-servers: localhost:9093
+    consumer:
+      group-id: auth
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
   redis:
     host: localhost
     port: 6379
+
+mail:
+  smtp:
+    port: 465
+    auth: true
+    starttls:
+      required: true
+      enable: true
+    socketFactory:
+#      class: javax.net.ssl.SSLSocketFactory
+      fallback: false
+      port: 465
+
+# admin 구글 계정
+AdminMail:
+  id:
+  password:
