--- a/email/build.gradle
+++ b/email/build.gradle
@@ -22,9 +22,15 @@ jar {
 
 
 dependencies {
+
     implementation 'org.springframework.boot:spring-boot-starter-web:2.1.18.RELEASE'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.1.6.RELEASE'
+//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.kafka:spring-kafka:2.2.15.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter:2.1.18.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 }
