feat(zuul/application.yml): zuul routes email 추가

--- a/zuul/src/main/resources/application.yml
+++ b/zuul/src/main/resources/application.yml
@@ -22,6 +22,10 @@ zuul:
       path: /**
       serviceId: group #eureka에 등록된 Id를 말한다.
       stripPrefix: false
+    email:
+      path: /**
+      serviceId: email #eureka에 등록된 Id를 말한다.
+      stripPrefix: false
 
 eureka:
   instance:
