--- a/group/src/main/resources/application.yml
+++ b/group/src/main/resources/application.yml
@@ -9,10 +9,10 @@ spring:
   application:
     name: group
   datasource:
-#    schema:
-#      - classpath:/member-schema.sql
-#      - classpath:/login-log-schema.sql
-#    initialization-mode: always
+    schema:
+      - classpath:/group-table-schema.sql
+      - classpath:/group-table-member-schema.sql
+    initialization-mode: always
     #    mySQL setting
     #    url: jdbc:mysql://127.0.0.1:3306/msa_jongjun_group?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
     url: jdbc:log4jdbc:mysql://127.0.0.1:3306/msa_jongjun_group?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
