--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
     implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
     implementation 'mysql:mysql-connector-java:8.0.30'
+    implementation 'org.springframework.cloud:spring-cloud-sleuth:2.0.0.RELEASE'
+    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin:2.0.0.RELEASE'
+
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
