--- a/zuul/build.gradle
+++ b/zuul/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.1.6.RELEASE'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:2.1.5.RELEASE'
     implementation 'net.minidev:json-smart:1.1.1'
+    implementation 'org.springframework.cloud:spring-cloud-sleuth:2.0.0.RELEASE'
+    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin:2.0.0.RELEASE'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 }
