--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -8,6 +8,11 @@ server:
 spring:
   application:
     name: auth
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1.0
   datasource:
     schema:
       - classpath:/member-schema.sql
