--- a/group/src/main/resources/application.yml
+++ b/group/src/main/resources/application.yml
@@ -8,6 +8,11 @@ server:
 spring:
   application:
     name: group
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1.0
   datasource:
     schema:
       - classpath:/group-table-schema.sql
