--- a/zuul/src/main/resources/application.yml
+++ b/zuul/src/main/resources/application.yml
@@ -4,6 +4,11 @@ spring:
   redis:
     host: localhost
     port: 6379
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1.0
 
 server:
   port: 8765
