--- a/group/build.gradle
+++ b/group/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.1.6.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.cloud:spring-cloud-starter-config:2.1.9.RELEASE'
     implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
     implementation 'mysql:mysql-connector-java:8.0.30'
     implementation 'org.springframework.cloud:spring-cloud-sleuth:2.0.0.RELEASE'
