--- a/email/build.gradle
+++ b/email/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'org.springframework.kafka:spring-kafka:2.2.15.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter:2.1.18.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'org.springframework.cloud:spring-cloud-starter-config:2.1.9.RELEASE'
     implementation 'org.springframework.cloud:spring-cloud-sleuth:2.0.0.RELEASE'
     implementation 'org.springframework.cloud:spring-cloud-starter-zipkin:2.0.0.RELEASE'
     compileOnly 'org.projectlombok:lombok'
