--- a/zuul/build.gradle
+++ b/zuul/build.gradle
@@ -22,10 +22,15 @@ jar {
 
 dependencies {
     implementation platform('org.springframework.cloud:spring-cloud-dependencies:Greenwich.SR6')
-    implementation 'org.springframework.retry:spring-retry:2.0.0'
+    implementation 'org.springframework.retry:spring-retry:1.2.2.RELEASE'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-zuul:2.1.6.RELEASE'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.1.6.RELEASE'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:2.1.5.RELEASE'
+    implementation 'org.springframework.cloud:spring-cloud-starter-config:2.0.0.RELEASE'
+
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
     implementation 'net.minidev:json-smart:1.1.1'
     implementation 'org.springframework.cloud:spring-cloud-sleuth:2.0.0.RELEASE'
     implementation 'org.springframework.cloud:spring-cloud-starter-zipkin:2.0.0.RELEASE'
