feat(config): auth-jwt 변수명 수정

--- a/config/src/main/resources/config/auth-jwt.properties
+++ b/config/src/main/resources/config/auth-jwt.properties
@@ -1,5 +1,5 @@
 jwt.type=JWT
-jwt.SIGN_KEY_VALUE=iskeyhavetolongidontknowaboutthis
-jwt.HEADER_ALG=HS256
-jwt.TOKEN_ISSUER= auth app
+jwt.signKey=iskeyhavetolongidontknowaboutthis
+jwt.header.alg=HS256
+jwt.issuer= auth app
 jwt.accessExp= 86400000
