refactor: config server 적용 수정
- default만 config server 적용

--- a/config/src/main/resources/config/email.properties
+++ b/config/src/main/resources/config/email.properties
@@ -1,11 +1,20 @@
+spring.zipkin.base-url=http://localhost:9411
+spring.sleuth.messaging.kafka.enabled=false
+spring.sleuth.sampler.probability=1.0
+
 spring.kafka.bootstrap-servers=localhost:9093
+spring.kafka.consumer.group-id=auth
+spring.kafka.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+
 mail.smtp.port=465
 mail.smtp.auth=true
 mail.smtp.starttls.required=true
 mail.smtp.starttls.enable=true
 mail.smtp.socketFactory.fallback=false
 mail.smtp.socketFactory.port=465
+
 AdminMail.id=belljun3395@gmail.com
 AdminMail.password=apglaiqjxnlqxste
+
 eureka.instance.prefer-ip-address=true
 eureka.client.service-url.defaultZone=http://127.0.0.1:8761/eureka
