--- a/auth/src/main/resources/application-dev.yml
+++ b/auth/src/main/resources/application-dev.yml
@@ -12,7 +12,7 @@ spring:
     name: auth
   cloud:
     discovery:
-      enabled: true # for eureka
+      enabled: false # for eureka
   datasource:
     schema:
       - classpath:/member-schema.sql
@@ -20,6 +20,10 @@ spring:
     data:
       - classpath:/member-data.sql
     initialization-mode: always
+    url: jdbc:log4jdbc:h2:tcp://localhost/~/msa_jongjun;MODE=MYSQL
+    username: sa
+    password:
+    driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
   jpa:
     hibernate:
       ddl-auto: none
@@ -27,26 +31,20 @@ spring:
       hibernate:
         #        show_sql: true
         format_sql: true
+  redis:
+    host: localhost
+    port: 6379
   kafka:
+    bootstrap-servers: localhost:9093 #h2와 포트 동일
     consumer:
       group-id: auth
 
-hystrix:
-  command:
-    authInfo:    # command key. use 'default' for global setting.
-      execution:
-        isolation:
-          thread:
-            timeoutInMilliseconds: 3000
-      circuitBreaker:
-        requestVolumeThreshold: 1   # Minimum number of request to calculate circuit breaker's health. default 20
-        errorThresholdPercentage: 50 # Error percentage to open circuit. default 50
-
-auth:
-  ribbon:
-    MaxAutoRetries: 0
-    MaxAutoRetriesNextServer: 1
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    service-url:
+      defaultZone: http://127.0.0.1:8761/eureka  # default address
 
 logging.level:
   org.hibernate.SQL: debug
-
