--- a/config/src/main/resources/config/auth.properties
+++ b/config/src/main/resources/config/auth.properties
@@ -1,9 +1,19 @@
+spring.zipkin.base-url=http://localhost:9411
+spring.sleuth.sampler.probability=1.0
+
 spring.datasource.url=jdbc:log4jdbc:mysql://127.0.0.1:3306/msa_jongjun?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
 spring.datasource.username=root
 spring.datasource.password=root@1234
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.format_sql=true
+
 spring.redis.host=localhost
 spring.redis.port=6379
+
 spring.kafka.bootstrap-servers=localhost:9093
+spring.kafka.consumer.group-id=auth
+
 eureka.instance.prefer-ip-address=true
 eureka.client.service-url.defaultZone=http://127.0.0.1:8761/eureka
