--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -22,14 +22,12 @@ jar {
 
 
 dependencies {
-    implementation 'org.springframework.retry:spring-retry:1.2.2.RELEASE'  // spring cloud requires spring-retry for auto-retry
-    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:2.1.5.RELEASE'  // To use Feign
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.1.6.RELEASE' // 3. To use Eureka client
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-ribbon:2.1.6.RELEASE'  // 2. To use ribbon
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix:2.1.6.RELEASE' // 1. To use spring-cloud-hystrix
+    implementation 'org.springframework.retry:spring-retry:1.2.2.RELEASE'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.1.6.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-web:2.1.18.RELEASE'
     implementation 'org.springframework.cloud:spring-cloud-starter-config:2.1.9.RELEASE'
-
+    implementation 'org.springframework.cloud:spring-cloud-sleuth:2.0.0.RELEASE'
+    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin:2.0.0.RELEASE'
     implementation 'org.springframework.kafka:spring-kafka:2.2.15.RELEASE'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -41,8 +39,6 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
     implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
     implementation 'mysql:mysql-connector-java:8.0.30'
-    implementation 'org.springframework.cloud:spring-cloud-sleuth:2.0.0.RELEASE'
-    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin:2.0.0.RELEASE'
 
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
